# tmserver

./: README.md  pyproject.toml
src/tmserver/: api.py  auth.py  crew.py  db.py  helpers.py  main.py  models.py  run_tailor.py  run_workshop.py  test_api.py  test_mongo.py
src/tmserver/config/: agents.yaml  tasks.yaml
src/tmserver/templates/: resume.html
src/tmserver/tools/: __init__.py
