[project]
name = "tmserver"
version = "0.1.0"
description = "tmserver using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "google-auth>=2.43.0",
    "motor>=3.7.1",
    "pymongo[srv]>=4.15.4",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
tmserver = "tmserver.main:run"
run_crew = "tmserver.main:run"
train = "tmserver.main:train"
replay = "tmserver.main:replay"
test = "tmserver.main:test"
run_with_trigger = "tmserver.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
